--- a/gestao_financeiro/templates/gestao_financeiro/painel.html
+++ b/gestao_financeiro/templates/gestao_financeiro/painel.html
@@ -7,6 +7,10 @@
     <title>Painel de Gestão Financeira</title>
     <link rel="stylesheet" href="{% static 'gestao_financeiro/css/style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Homebar com nome do usuário e data -->
@@ -65,7 +69,7 @@
                 </div>
                 <div class="card-content">
                     <h3>Provisão de Receitas</h3>
-                    <p>R$ {{ total_provisao_receitas|floatformat:2 }}</p>
+                    <p>R$ {{ provisao_receita }}</p>
                 </div>
             </div>
 
@@ -75,7 +79,7 @@
                 </div>
                 <div class="card-content">
                     <h3>Provisão de Despesas</h3>
-                    <p>R$ {{ total_provisao_despesas|floatformat:2 }}</p>
+                    <p>R$ {{ provisao_despesa }}</p>
                 </div>
             </div>
         </div>
@@ -83,7 +87,7 @@
 </main>
 
         <!-- Botão flutuante para adicionar novas transações -->
-        <a href="javascript:void(0);" onclick="openPopup()" class=" icon-button floating-button">
+        <a href="javascript:void(0);" onclick="openPopup()" class=" icon-button2 floating-button">
             <i class="fas fa-plus-circle"></i>
         </a>
 
@@ -155,12 +159,18 @@
                         {% for transacao in proximas_despesas %}
                             <li>{{ transacao.descricao }} - R$ {{ transacao.valor|floatformat:2 }} - {{ transacao.data }}</li>
                         {% endfor %}
+                        {% for transacao in proximas_prov_receitas %}
+                            <li>{{ transacao.descricao }} - R$ {{ transacao.valor|floatformat:2 }} - {{ transacao.data }}</li>
+                        {% endfor %}
+                        {% for transacao in proximas_prov_despesas %}
+                            <li>{{ transacao.descricao }} - R$ {{ transacao.valor|floatformat:2 }} - {{ transacao.data }}</li>
+                        {% endfor %}
                     </ul>
                 </div>
                 <a href="{% url 'extrato_completo' %}" class="see-more-button">Ver mais</a>
             </div>
         </section>
-    </main>
+</main>
 
     <!-- Estrutura do Popup para Adicionar Transação -->
     <div id="popupForm" class="popup">
